# multi-turn-persona-drift

./: README.md  pyproject.toml
persona_drift/: analysis.ipynb  main_pipeline.py  prompts.jsonl  utils.py
persona_drift/outputs/20260719T135024Z/: config.json  records.jsonl
persona_drift/outputs/gemma/: records.csv  records_sbert.jsonl  sbert_centered_embeddings.npy
persona_drift/outputs/qwen/: config.json  records.jsonl  records_sbert.jsonl  sbert_centered_embeddings.npy
persona_drift/outputs/qwen_capped_both/: config.json  records.jsonl  records_sbert.jsonl  sbert_centered_embeddings.npy
persona_drift/outputs/qwen_capped_single/: config.json  records.jsonl
