[project]
name = "multi-turn-persona-drift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "huggingface-hub>=1.24.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.13.0",
    "transformers>=5.14.1",
]
